
[project]
name = "tsne-visualizer"
version = "0.1.0"
description = "Streamlit app for t-SNE analysis and visualization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.36",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "plotly>=5.22",
    "openpyxl>=3.1",
]

[tool.uv]
